@@ -3,6 +3,8 @@ CHANGES.txt - 09/15/2005
 
 CHANGES IN CUPS V1.2.0b1
 
+	- The scheduler now stops printers if the backend for the
+	  queue is missing on startup (STR #1265)
 	- The configure script now supports "--disable-library"
 	  to disable particular image file format support
 	  libraries, even if they are available on the build
